# MediAlert-SMA_V2

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_GITHUB.md  SETUP.md  WORKFLOW_IMPLEMENTATION.md  activate_venv.bat  pyproject.toml  requirements.txt  run.py  start_app.bat  test_alert.py
app/: __init__.py  config.py  config_settings.py  decorators.py
app/config/: llm_config.py
app/crew/: crew.py  crew_optimized.py  crew_parallel.py  crew_simple.py  main.py  tools.py
app/crew/config/: agents.yaml  tasks.yaml
app/crew/tools/: medical_tools.py
app/models/: __init__.py  patient.py  user.py
app/routes/: admin.py  api.py  auth.py  chat.py  chatbot.py  emergency_chat.py  patient.py  web.py
app/services/: ambulance_firebase_service.py  emergency_orchestrator.py  firebase_service.py  geolocation.py  hospital_firebase_service.py  hospital_service.py  infermedica_service.py  location_service.py  ors_service.py  smart_dispatch.py  system_logs_service.py
app/static/css/: custom.css  home.css  light-mode.css
app/templates/: alert_form.html  base.html  dashboard.html  index.html  tracking.html
config/: .env.example
data/: New_Medcin_maroc.csv  morocco_hospitals.csv  patients.json  users.json
docs/: PROJECT_STRUCTURE.md  README.md  REORGANIZATION_SUMMARY.md  VIRTUAL_ENVIRONMENT_SETUP.md
scripts/: install.py  requirements.txt  requirements_fixed.txt  requirements_minimal.txt  seed_firestore.py
tests/: test_env_loading.py  test_fallback_services.py  test_geolocation.py  test_installation.py  test_merge_priority.py  test_simple.py
(+19 files in other folders)
